Fix displaying photos on mobile devices.

--- a/src/assets/scss/photos.scss
+++ b/src/assets/scss/photos.scss
@@ -42,7 +42,7 @@
   	}
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   	.photos-container {
     	column-count: 1;
   	}
